--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#FF0000">  	<span class="say">亲爱的韩玉蒙，我爱你。</span><br>
+			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫，我爱你。</span><br>
 						<span class="say"> </span><br>
 <span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
 						<span class="say"> </span><br>
@@ -39,14 +39,14 @@
 <span class="say">距离，让思念生出美丽，懂得，让心灵有了皈依。</span><br>
 <span class="say">人生最幸福的事，就是有一个你暖暖的住在心底。</span><br>
 <span class="say"> </span><br>
-<span class="say"><span class="space"></span> -- 爱你的白轲祥--</span>
+<span class="say"><span class="space"></span> -- 爱你的宝宝--</span>
 			  </font></p>
       </div>
                 </div>
-                <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#FF83FA">亲爱的韩玉蒙，我们在一起已经</font>
+               <!-- <div id="clock-box">
+                    <span class="STYLE1"></span><font color="#FF83FA">亲爱的小宝贝丫，我们在一起已经</font>
                   <div id="clock"></div>
-              </div>
+              </div> -->
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
 
