--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>❤爱你如生活❤</title>
+		<title>❤爱你❤爱生活❤</title>
         <link type="text/css" rel="stylesheet" href="./renxi/default.css">
 		<script type="text/javascript" src="./renxi/jquery.min.js"></script>
 		<script type="text/javascript" src="./renxi/jscex.min.js"></script>
@@ -26,12 +26,10 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫，我爱你。</span><br>
+			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫LXD</span><br>
 						<span class="say"> </span><br>
-<span class="say">我知道我不会甜言蜜语，但是我会用行动证明一切</span><br>
+<span class="say">我也我不知道我要干啥，这七夕啥也没买，只能弄个这玩意来解决问题了</span><br>
 						<span class="say"> </span><br>
-
-
 
 <span class="say">两个人在一起，最重要的感觉就是舒服。</span><br>
 <span class="say">即使默默不语，也是一种默契。</span><br>
@@ -39,7 +37,7 @@
 <span class="say">距离，让思念生出美丽，懂得，让心灵有了皈依。</span><br>
 <span class="say">人生最幸福的事，就是有一个你暖暖的住在心底。</span><br>
 <span class="say"> </span><br>
-<span class="say"><span class="space"></span> -- 爱你的宝宝--</span>
+<span class="say"><span class="space"></span> -- 爱你的宝宝 --</span>
 			  </font></p>
       </div>
                 </div>
