--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
 			        <div id="code">
 			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫LXD</span><br>
 						<span class="say"> </span><br>
-<span class="say">我也我不知道我要干啥，这七夕啥也没买，只能弄个这玩意来解决问题了</span><br>
-						<span class="say"> </span><br>
+<span class="say">我也我不知道我要干啥，这七夕啥也没买</span><br>
+<span class="say">只能弄个这玩意来解决问题了</span><br>
+<span class="say">先来看个煽情的</span><br>
+<span class="say"> </span><br>
 
-<span class="say">两个人在一起，最重要的感觉就是舒服。</span><br>
-<span class="say">即使默默不语，也是一种默契。</span><br>
-<span class="say">纵然两两相望，也是一种欣喜。</span><br>
-<span class="say">距离，让思念生出美丽，懂得，让心灵有了皈依。</span><br>
-<span class="say">人生最幸福的事，就是有一个你暖暖的住在心底。</span><br>
+<span class="say">两个人在一起，最重要的感觉就是舒服</span><br>
+<span class="say">即使默默不语，也是一种默契</span><br>
+<span class="say">纵然两两相望，也是一种欣喜</span><br>
+<span class="say">距离，让思念生出美丽，懂得，让心灵有了皈依</span><br>
+<span class="say">人生最幸福的事，就是有一个你暖暖的住在心底</span><br>
+<span class="say"> </span><br>
+<span class="say">呐呐  煽情的也看完了</span><br>
+<span class="say">反正我这人也不会说话</span><br>
+<span class="say">就是跟你说声爱你昂  七夕快乐</span><br>
 <span class="say"> </span><br>
 <span class="say"><span class="space"></span> -- 爱你的宝宝 --</span>
 			  </font></p>
