--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
              <div id="wrap">
                 <div id="text">
 			        <div id="code">
-			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫LXD</span><br>
+			      <font color="#FF0000">  	<span class="say">亲爱的小宝贝丫  lxd</span><br>
 						<span class="say"> </span><br>
 <span class="say">我也我不知道我要干啥，这七夕啥也没买</span><br>
 <span class="say">只能弄个这玩意来解决问题了</span><br>
