--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <span class="say">反正我这人也不会说话</span><br>
 <span class="say">就是跟你说声爱你昂  七夕快乐</span><br>
 <span class="say"> </span><br>
-<span class="say"><span class="space"></span> -- 爱你的宝宝 --</span>
+<span class="say"><span class="space"></span> -- 爱你的参谋长 --</span>
 			  </font></p>
       </div>
                 </div>
